task2/pythonapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.27.0 (b0ed6a2c9)
  labels:
    io.kompose.service: pythonapp
  name: pythonapp
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pythonapp
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.27.0 (b0ed6a2c9)
      labels:
        io.kompose.service: pythonapp
    spec:
      containers:
        - env:
            - name: POSTGRES_CONNECTION_PATH
              valueFrom:
                secretKeyRef:
                  name: mysecret
                  key: connectionstring
                  optional: false
          image: pythonapp
          imagePullPolicy: Never
          name: pythonapp
          ports:
            - containerPort: 5000
          resources: {}
      restartPolicy: Always
status: {}
